--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,14 +11,14 @@
 
 body, html {
     font-size: 125%;
-    background-color: #CCDADA;
+    background-color: #E5E5E5;
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
 
 .wrapper {
-    width: 82.5%;
+    width: 80%;
     max-width: 1400px;
     margin: 0 auto;
 }
