--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -6,13 +6,14 @@
 .contactImage {
     border: 10px solid white;
     width: 33%;
-    height: 500px;
+    height: 450px;
 }
 .contactForm {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     width: 33%;
+    align-items: center;
     button {
         background: #001F3D;
         color: white;
@@ -31,21 +32,22 @@
 .contactInput {
     border: none;
     border-bottom: 2px solid #001F3D;
-    background: #CCDADA;
+    background: #E5E5E5;
     padding-bottom: 30px;
     font-family: $mont;
     color: #001F3D;
     overflow: hidden;
-    width: 300px;
+    width: 90%;
     font-size: 20px;
 }
 .contactInfo {
-    width: 25%;
+    width: 27%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     p {
         font-size: 16px;
         padding: 15px 0 25px 0;
+        text-align: center;
     }
 }
