--- a/styles/partials/_landing.scss
+++ b/styles/partials/_landing.scss
@@ -8,13 +8,17 @@
     padding-top: 100px;
 }
 .landingText {
-    width: 45%;
+    width: 55%;
     h1 {
         padding-bottom: 30px;
     }
     p {
         padding-bottom: 40px;
         // text-transform: capitalize;
+    }
+    p:nth-of-type(2){
+        font-size: 18px;
+        font-weight: 500;
     }
 }
 .portraitDiv {
@@ -25,6 +29,8 @@
 .portraitImage {
     width: 400px;
     border-radius: 50%;
+    border: 6px solid white;
+    box-shadow: 10px 10px 20px 5px;
 }
 .iconsFlex {
     display: flex;
