--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -63,6 +63,7 @@ h6 {
     font-size: 18px;
     line-height: 24px;
     color: #0F4A6F;
+    text-align: center;
 }
 //body paragraphs, contact sheet
 p {
