--- a/styles.css
+++ b/styles.css
@@ -331,6 +331,174 @@ p {
   color: #FFFBFB;
 }
 
+.hamburgerDiv {
+  position: fixed;
+  right: 30px;
+  opacity: 0;
+  top: 30px;
+}
+
+.toggler {
+  position: fixed;
+  right: 30px;
+  width: 65px;
+  height: 65px;
+  z-index: 2;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.hamburger {
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  width: 65px;
+  height: 65px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.hamburger > div {
+  position: relative;
+  width: 100%;
+  height: 8px;
+  background-color: #0F4A6F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hamburger > div:before,
+.hamburger > div:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -20px;
+  width: 100%;
+  height: 8px;
+  background: inherit;
+}
+
+.hamburger > div:after {
+  top: 20px;
+}
+
+.toggler:checked + .hamburger > div {
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.toggler:checked + .hamburger > div:before,
+.toggler:checked + .hamburger > div:after {
+  top: 0;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.toggler:checked:hover + .hamburger > div {
+  -webkit-transform: rotate(225deg);
+          transform: rotate(225deg);
+}
+
+.overlayMenu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  visibility: hidden;
+}
+
+.overlayMenu > div {
+  background: #0F4A6F;
+  border-radius: 50%;
+  width: 200vw;
+  height: 200vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.overlayMenu > div > div {
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vh;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+.overlayMenu > div > div > ul > li {
+  color: white;
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+.overlayMenu > div > div > ul > li > a {
+  -webkit-transition: color 0.4s ease;
+  transition: color 0.4s ease;
+  color: white;
+}
+
+.toggler:checked ~ .overlayMenu {
+  visibility: visible;
+}
+
+.toggler:checked ~ .overlayMenu > div {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition-duration: 1.25s;
+          transition-duration: 1.25s;
+}
+
+.toggler:checked ~ .overlayMenu > div > div {
+  opacity: 1;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+.toggler:checked ~ .hamburger > div {
+  background-color: white;
+}
+
 .navFlex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -386,6 +554,83 @@ p {
   left: -25px;
 }
 
+@-webkit-keyframes menu-animation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.04) translateY(300%);
+            transform: scale(0.04) translateY(300%);
+  }
+  40% {
+    -webkit-transform: scale(0.04) translateY(0);
+            transform: scale(0.04) translateY(0);
+    -webkit-transition: ease-out;
+    transition: ease-out;
+  }
+  40% {
+    -webkit-transform: scale(0.04) translateY(0);
+            transform: scale(0.04) translateY(0);
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: scale(0.02) translateY(0px);
+            transform: scale(0.02) translateY(0px);
+  }
+  61% {
+    -webkit-transform: scale(0.04);
+            transform: scale(0.04);
+  }
+  99.9% {
+    height: 0;
+    padding-bottom: 100%;
+    border-radius: 100%;
+  }
+  100% {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    height: 100%;
+    padding-bottom: 0;
+    border-radius: 0;
+  }
+}
+
+@keyframes menu-animation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.04) translateY(300%);
+            transform: scale(0.04) translateY(300%);
+  }
+  40% {
+    -webkit-transform: scale(0.04) translateY(0);
+            transform: scale(0.04) translateY(0);
+    -webkit-transition: ease-out;
+    transition: ease-out;
+  }
+  40% {
+    -webkit-transform: scale(0.04) translateY(0);
+            transform: scale(0.04) translateY(0);
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: scale(0.02) translateY(0px);
+            transform: scale(0.02) translateY(0px);
+  }
+  61% {
+    -webkit-transform: scale(0.04);
+            transform: scale(0.04);
+  }
+  99.9% {
+    height: 0;
+    padding-bottom: 100%;
+    border-radius: 100%;
+  }
+  100% {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    height: 100%;
+    padding-bottom: 0;
+    border-radius: 0;
+  }
+}
 .landing {
   padding-bottom: 100px;
 }
@@ -411,6 +656,7 @@ p {
 }
 .landingText p {
   padding-bottom: 40px;
+  font-size: 20px;
 }
 .landingText p:nth-of-type(2) {
   font-size: 18px;
@@ -430,9 +676,9 @@ p {
 .portraitImage {
   width: 400px;
   border-radius: 50%;
-  border: 6px solid white;
-  -webkit-box-shadow: 10px 10px 20px 5px;
-          box-shadow: 10px 10px 20px 5px;
+  border: 7px solid #001F3D;
+  -webkit-box-shadow: 7px 25px 25px 7px;
+          box-shadow: 7px 25px 25px 7px;
 }
 
 .iconsFlex {
@@ -468,7 +714,9 @@ p {
   color: black;
 }
 .landingArrow:hover {
-  color: #F8EDEB;
+  color: lightblue;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
 }
 
 .portfolio {
@@ -815,6 +1063,9 @@ h4 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background: white;
+  padding: 50px 50px;
+  border-radius: 3%;
 }
 
 .aboutText {
@@ -837,7 +1088,7 @@ h4 {
   -o-object-position: center;
      object-position: center;
   border-radius: 50%;
-  border: 10px solid white;
+  border: 10px solid #001F3D;
 }
 
 .techStack {
@@ -977,7 +1228,7 @@ h5 a:hover {
 }
 
 .contactImage {
-  border: 10px solid white;
+  border: 10px solid #001F3D;
   width: 33%;
   height: 450px;
 }
@@ -1006,6 +1257,10 @@ h5 a:hover {
   font-size: 20px;
   padding: 10px 0;
   width: 75%;
+}
+.contactForm button:hover {
+  background: lightblue;
+  color: black;
 }
 
 .submittedContact {
@@ -1394,6 +1649,13 @@ body, html {
   background-color: #E5E5E5;
   scroll-behavior: smooth;
   overflow-x: hidden;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .wrapper {
