--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -4,7 +4,7 @@
     padding-bottom: 40px;
 }
 .contactImage {
-    border: 10px solid white;
+    border: 10px solid #001F3D;
     width: 33%;
     height: 450px;
 }
@@ -22,6 +22,10 @@
         font-size: 20px;
         padding: 10px 0;
         width: 75%;
+        &:hover {
+            background: lightblue;
+            color: black;
+        }
     }
 }
 .submittedContact {
