--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,13 +9,18 @@
 @import "./partials/footer";
 @import "./partials/_mediaQueries";
 
+
 body, html {
     font-size: 125%;
     background-color: #E5E5E5;
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
-
+*,
+  *:before,
+  *:after {
+    transition: 0.5s ease-in-out;
+  }
 
 .wrapper {
     width: 80%;
