optimizing page for speed and accessibility

--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -164,7 +164,7 @@ h2 {
     // border-right: 145px solid black;
     // border-left: 145px solid black;
     display: block;
-    h5 {
+    .featuredHeading {
         text-align: center;
         margin-bottom: 40px;
         padding-bottom: 20px;
