--- a/styles.css
+++ b/styles.css
@@ -259,7 +259,7 @@ h4 {
   color: #001F3D;
 }
 
-h5 {
+h5, .featuredHeading {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 20px;
@@ -907,7 +907,7 @@ h2 {
   margin: 0 auto;
   display: block;
 }
-.featured h5 {
+.featured .featuredHeading {
   text-align: center;
   margin-bottom: 40px;
   padding-bottom: 20px;
