--- a/styles.css
+++ b/styles.css
@@ -720,7 +720,7 @@ p {
 }
 
 .portfolio {
-  background: url("portfolioBackground.png");
+  background: url("portfolioBackground.webp");
   background-size: contain;
   background-repeat: no-repeat;
   background-position-y: -50px;
