--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -159,6 +159,9 @@
     .portfolio {
         background-size: auto;
     }
+    .linkFlex {
+        display: none;
+    }
     h3 {
         width: 70%
     }
