--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -139,6 +139,12 @@ h2 {
         bottom: 0;
     }
 }
+.pageTurnerGifAll {
+    position: absolute;
+    top: 0;
+    height: 435px;
+    width: 100%;
+}
 .video1 {
     width: 45%;
     position: relative;
