--- a/styles.css
+++ b/styles.css
@@ -881,6 +881,13 @@ h2 {
   bottom: 0;
 }
 
+.pageTurnerGifAll {
+  position: absolute;
+  top: 0;
+  height: 435px;
+  width: 100%;
+}
+
 .video1 {
   width: 45%;
   position: relative;
@@ -1230,7 +1237,7 @@ h5 a:hover {
 .contactImage {
   border: 10px solid #001F3D;
   width: 33%;
-  height: 450px;
+  padding-top: 50px;
 }
 
 .contactForm {
@@ -1279,6 +1286,7 @@ h5 a:hover {
   overflow: hidden;
   width: 90%;
   font-size: 20px;
+  margin: 30px 0;
 }
 
 .contactInfo {
@@ -1296,7 +1304,7 @@ h5 a:hover {
 }
 .contactInfo p {
   font-size: 16px;
-  padding: 15px 0 25px 0;
+  padding: 35px 0 35px 0;
   text-align: center;
 }
 
@@ -1613,6 +1621,10 @@ footer a {
 @media (max-width: 500px) {
   .portfolio {
     background-size: auto;
+  }
+
+  .linkFlex {
+    display: none;
   }
 
   h3 {
