--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -9,20 +9,24 @@ h4 {
    text-align: center;
    padding-right: 10px;
 }
+.about {
+    margin-top: 125px;
+}
 .aboutDesc {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: white;
+    background: black;
     padding: 50px 50px;
-    border-radius: 3%;
+    border-radius: 6%;
 }
 .aboutText {
     width: 50%;
     p {
-        text-align: left;
+        text-align: center;
         padding: 25px 0;
         font-size: 18px;
+        color: white;
     }
 }
 .aboutPicture {
@@ -30,10 +34,10 @@ h4 {
     img {
         width: 100%;
         height: 60vh;
-        object-fit: contain;
+        object-fit:cover;
         object-position: center;
-        border-radius: 50%;
-        border: 10px solid #001F3D;
+        border-radius: 15%;
+        box-shadow: 7px 15px 40px 7px;
     }
 }
 
@@ -67,7 +71,7 @@ h4 {
     margin: 30px auto;
 }
 
-.techStack:nth-of-type(3){
+.techStack:nth-of-type(2){
     width: 80%;
     margin: 0 auto;
     .tech {
