--- a/styles/partials/_landing.scss
+++ b/styles/partials/_landing.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 100px;
+    padding-top: 125px;
 }
 .landingText {
     width: 55%;
@@ -27,10 +27,9 @@
     justify-content: flex-end;
 }
 .portraitImage {
-    width: 400px;
+    width: 75%;
     border-radius: 50%;
-    border: 7px solid #001F3D;
-    box-shadow: 7px 25px 25px 7px;
+    box-shadow: 7px 15px 40px 7px;
 }
 .iconsFlex {
     display: flex;
