--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -27,3 +27,11 @@ body, html {
     max-width: 1400px;
     margin: 0 auto;
 }
+main {
+  position: relative;
+  z-index: 0;
+}
+header {
+  position: relative;
+  z-index: 1;
+}
