--- a/styles/partials/_landing.scss
+++ b/styles/partials/_landing.scss
@@ -15,6 +15,7 @@
     p {
         padding-bottom: 40px;
         font-size: 20px;
+        font-family: 'Karla', sans-serif;
     }
     p:nth-of-type(2){
         font-size: 18px;
