--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -18,7 +18,7 @@ h4 {
     justify-content: space-between;
     background: black;
     padding: 50px 50px;
-    border-radius: 6%;
+    border-radius: 1%;
 }
 .aboutText {
     width: 50%;
@@ -27,6 +27,7 @@ h4 {
         padding: 25px 0;
         font-size: 18px;
         color: white;
+        font-family: $karla;
     }
 }
 .aboutPicture {
@@ -36,7 +37,7 @@ h4 {
         height: 60vh;
         object-fit:cover;
         object-position: center;
-        border-radius: 15%;
+        border-radius: 5%;
         box-shadow: 7px 15px 40px 7px;
     }
 }
