--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -57,6 +57,7 @@
         font-size: 16px;
         padding: 35px 0 35px 0;
         text-align: center;
+        font-family: $karla;
         
     }
     p:first-of-type {
