--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -107,12 +107,30 @@ $color-lite: lighten($color, 10%);
 
 .overlayMenu > div > div > ul > li {
     color: white;
-    font-size: 2rem;
-    padding: 2rem;
+    font-size: 1.25rem;
+    padding: 1.5rem;
+    list-style-type: none;
 }
 .overlayMenu > div > div > ul > li > a {
     transition: color 0.4s ease;
     color: white;
+    text-decoration: none;
+    padding: 7px 5px;
+    margin: 0 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.25em;
+    line-height: 1.1px;
+    font-family: $mont;
+    :hover {
+        color: black;
+        border-bottom: 1px solid white;
+    }
+}
+.overlayLink:hover {
+    color: black;
+    border-bottom: 1px solid white;
+    transform: scale(1.5);
+    transition-duration: 0.5s;
 }
 //show menu on checked
 .toggler:checked ~ .overlayMenu {
@@ -139,20 +157,61 @@ $color-lite: lighten($color, 10%);
 }
 .linkFlex {
     display: flex;
-    width: 30%;
     justify-content: space-between;
     
 }
 .navLink {
     list-style-type: none;
+    transition: all 0.3s;
+    position: relative;
+    ::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: all 0.3s;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+        transform: scale(0.1, 1);
+        z-index: 1;
+        background:rgb(229,229,229, 0.1);
+    }
+    :hover ~ a {
+        letter-spacing: 2px;
+    }
+    :hover::before {
+        opacity: 1;
+        transform: scale(1 ,1);
+    }
+    ::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        transition: all 0.3s;
+    }
+    :hover::after {
+        opacity: 0;
+        transform: scale(0.1, 1);
+    }
     a {
         text-decoration: none;
-        color: black;
-        padding: 10px 20px;
+        color: #001F3D;
+        padding: 7px 5px;
+        margin: 0 10px;
+        text-transform: uppercase;
+        letter-spacing: 0.25em;
+        line-height: 1.1px;
+        // border: 2px solid black;
+        transition: all 0.3s;
         &:hover{
-            border: 2px solid rgb(197, 230, 220);
-            background:rgb(199, 230, 224);
-            border-radius: 5px;
+            background:rgb(200,210,220, 0.8);
             transition: background-color 0.3s ease;
         }
     }
