--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -183,6 +183,7 @@ h2 {
     padding-bottom: 80px;
     padding-top: 10px;
     justify-content: space-between;
+    align-items: center;
     &:nth-of-type(2) {
         border-top: 2px solid black;
         padding-top: 80px;
