--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,5 +1,6 @@
 $mont: 'Montserrat', sans-serif;
 $nun: 'Nunito', sans-serif;
+$karla: 'Karla', sans-serif;
 
 h1 {
     font-family: $mont;
@@ -77,7 +78,7 @@ p {
 .navLink {
     font-family: $mont;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 24px;
     text-align: Left;
     vertical-align: Top;
