--- a/styles/partials/_landing.scss
+++ b/styles/partials/_landing.scss
@@ -52,7 +52,7 @@
 }
 .landingArrow {
     text-decoration: none;
-    color: black;
+    color: #F8EDEB;
     &:hover{
         color: lightblue;
         transform: translateY(30px);
