--- a/styles/partials/_recentPosts.scss
+++ b/styles/partials/_recentPosts.scss
@@ -37,6 +37,9 @@
         padding-bottom: 10px;
         font-size: 18px;
     }
+    p:first-of-type{
+        color: #21243D;
+    }
     p:nth-of-type(2){
         color: black;
     }
