--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -7,7 +7,7 @@ h1 {
     font-weight: 500;
     font-size: 40px;
     line-height: 50px;
-    color: #0F4A6F;
+    color: #F8EDEB;
 
 }
 //Portfolio sub heading
@@ -32,7 +32,7 @@ h3 {
     line-height: 38px;
     letter-spacing: 17px;
     text-align: center;
-    color: #001F3D;
+    color: #F8EDEB;
 }
 
 // Using now 
@@ -43,7 +43,7 @@ h4 {
     font-size: 30px;
     line-height: 30px;
     letter-spacing: 4px;
-    color: #001F3D
+    color: #F8EDEB;
 }
 
 h5, .featuredHeading {
@@ -63,7 +63,7 @@ h6 {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #0F4A6F;
+    color: #F8EDEB;
     text-align: center;
 }
 //body paragraphs, contact sheet
@@ -72,7 +72,7 @@ p {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    color: #0F4A6F
+    color: #F8EDEB;
 }
 
 .navLink {
