--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -19,12 +19,14 @@
     align-items: center;
     button {
         background: #001F3D;
-        color: white;
+        color: #F8EDEB;
         font-family: $mont;
         font-weight: 500;
         font-size: 20px;
         padding: 10px 0;
         width: 75%;
+        border: none;
+        cursor: pointer;
         &:hover {
             background: lightblue;
             color: black;
