--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -35,7 +35,7 @@ $color-lite: lighten($color, 10%);
     position: relative;
     width: 100%;
     height: 8px;
-    background-color: #0F4A6F;
+    background-color: #F8EDEB;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -202,7 +202,7 @@ $color-lite: lighten($color, 10%);
     }
     a {
         text-decoration: none;
-        color: #001F3D;
+        color: #F8EDEB;
         padding: 7px 5px;
         margin: 0 10px;
         text-transform: uppercase;
