--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -237,7 +237,9 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+    p:nth-of-type(3) {
+        color: #001F3D;
+    }
 }
 .mask {
     opacity: 0;
@@ -288,5 +290,40 @@ h2 {
     background: black;
     margin: 0 auto;
 }
-
-
+.animated {
+    opacity: 0;
+    position: relative;
+}
+.active {
+    opacity: 1;
+}
+.active.fade-in-left{
+    animation: fade-left 1s ease-in;
+}
+.active.fade-in-right {
+    animation: fade-right 1s ease-in;
+}
+@keyframes fade-left {
+  0% {
+    -webkit-transform: translateX(-100px);
+            transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-right {
+     0% {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
