--- a/styles.css
+++ b/styles.css
@@ -1295,7 +1295,7 @@ h4 {
 }
 
 .techStack:nth-of-type(2) {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 .techStack:nth-of-type(2) .tech {
@@ -1447,6 +1447,21 @@ h5 a:hover {
   width: 90%;
   font-size: 20px;
   margin: 30px 0;
+}
+.contactInput::-webkit-input-placeholder {
+  text-align: center;
+}
+.contactInput::-moz-placeholder {
+  text-align: center;
+}
+.contactInput:-ms-input-placeholder {
+  text-align: center;
+}
+.contactInput::-ms-input-placeholder {
+  text-align: center;
+}
+.contactInput::placeholder {
+  text-align: center;
 }
 
 .contactInfo {
@@ -1840,6 +1855,11 @@ footer a {
 
   .navFlex {
     padding-top: 70px;
+  }
+}
+@media (max-width: 400px) {
+  .techStackName {
+    font-size: 12px;
   }
 }
 body, html {
