--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -49,6 +49,9 @@
     width: 90%;
     font-size: 20px;
     margin: 30px 0;
+    &::placeholder{
+        text-align: center;
+    }
 }
 .contactInfo {
     width: 27%;
