--- a/styles.css
+++ b/styles.css
@@ -1869,6 +1869,7 @@ body, html {
   background-blend-mode: lighten;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 *,
