--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,6 +17,7 @@ body, html {
     background-blend-mode: lighten;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 *,
   *:before,
