--- a/styles/partials/_portfolioSection.scss
+++ b/styles/partials/_portfolioSection.scss
@@ -9,7 +9,10 @@
 .projectDisplay {
     background-color: #000000;
     display: none;
-    // padding-bottom: 300px;
+    padding-bottom: 625px;
+    justify-content: center;
+    position: relative;
+
 }
 .portfolioHeading {
     padding: 75px 0px;
@@ -69,10 +72,14 @@ h2 {
     flex-wrap: wrap;
     margin: 0;
     padding: 45px 0;
+    position: absolute;
 }
 .projectRowA {
     border-bottom: 4px solid black;
     margin-bottom: 30px;
+}
+.projectRowB {
+    margin-left: 100px;
 }
 .project {
     width: 45%;
@@ -290,10 +297,10 @@ h2 {
     background: black;
     margin: 0 auto;
 }
-.animated {
-    opacity: 0;
-    position: relative;
-}
+// .animated {
+//     opacity: 0;
+    
+// }
 .active {
     opacity: 1;
 }
@@ -326,4 +333,33 @@ h2 {
             transform: translateX(0);
     opacity: 1;
   }
+}
+
+.leftArrow {
+    position: absolute;
+    left: 5%;
+    top: 50%;
+    cursor: pointer;
+}
+.rightArrow {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    cursor: pointer;
+}
+.carouselIndicator {
+    background: none;
+    border-radius: 50%;
+    border: none;
+}
+.carouselNav {
+    position: absolute;
+    bottom: 5%;
+}
+.slides {
+    justify-content: center;
+    position: relative;
+    display: flex;
+    width: 100%;
+    left: 10%;
 }
