--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,7 +16,7 @@ body, html {
     background-color: (255, 255, 255, 0.8);
     background-blend-mode: lighten;
     scroll-behavior: smooth;
-    // overflow-x: hidden;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
 *,
